--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -51,9 +51,10 @@ After the pre-selection cuts, the $\nu_e$ CC purity is still low. Figure \ref{fi
 
 \begin{figure}[h]
     \centering
-     \includegraphics[height=4.9cm]{NueCCsel/Images/run1/pre_shower_E_pdg.pdf}
     \includegraphics[height=4.9cm]{NueCCsel/Images/run1/e_cand_dedxColl}
-    \caption{ Energy (\emph{Left}) of the electron candidate after the pre-selection cut d$E$/d$x$ on the collection plane (\emph{Right}) of the electron candidate shower after the pre-selection.}
+     \includegraphics[height=4.9cm]{NueCCsel/Images/run1/pre_shower_E_pdg.pdf}
+    
+    \caption{d$E$/d$x$ on the collection plane (\emph{Right}) of the electron candidate shower after the pre-selection. Energy (\emph{Left}) of the electron candidate after the pre-selection cut.}
     \label{fig:e_cand_Calo}
 \end{figure}
 
@@ -186,7 +187,7 @@ We construct the final event classification BDT building on the particle identif
     \item otherD\_MeanScore
     \item number of particles in the slice that have a reconstructed start point more than \SI{3}{\cm} from the neutrino vertex.
 \end{enumerate}
-The response of the event classification is given in the left panel \cref{fig:pre_event_score}. After the selection, the efficiency is 21\%, corresponding to 280 electron neutrino's in the Run 1-4 data-set. The distribution of the reconstructed electron energy is given in the right panel of \cref{fig:pre_event_score}. \cref{fig:nueccinc_eff} documents the efficiency of the SliceID, pre-selection and final inclusive selection for the three final state categories \textcolor{blue}{In the context of this note, I think it would be better to have the combined efficiency of the three channels (cause otherwise the reader can get confused with the previous sections)}.
+The response of the event classification is given in the left panel \cref{fig:pre_event_score}. After the selection, the efficiency is 21\%, corresponding to 280 electron neutrino's in the Run 1-4 data-set. The distribution of the reconstructed electron energy is given in the right panel of \cref{fig:pre_event_score}. \cref{fig:nueccinc_eff} documents the efficiency of the SliceID, pre-selection and final inclusive selection for $\nu_e$ interactions.
 
 %\begin{figure}
 %    \centering
