--- a/NuEvtReco-Ch4/NuEvtReco.tex
+++ b/NuEvtReco-Ch4/NuEvtReco.tex
@@ -4,14 +4,13 @@ This section highlights the key aspects of the event reconstruction which allow 
 The output of Pandora~\cite{bib:pandoraub} is organized in a hierarchy of reconstructed Particle Flow Particles (``PFParticles''), which describes the particle content in an observed event as a parent-daughter relationship chain. Final state PFParticles are 3D objects matching clusters of hits in at least two different planes.
 Pandora classifies PFParticles as track-like or shower-like base on a Support Vector Machine (SVM) algorithm~\cite{bib:tkshsvm}, producing a score with values between 0 (shower-like) and 1 (track-like). \textcolor{blue}{Can we add a quick sentence on the relationship between the PFParticles to the slice? At this point of the note, the reader knows that Pandora provides slices and not much more... Elena }
 
-Pandora processes track-like PFParticles with a sliding linear fit procedure (described in~\cite{bib:pandoraub}) that returns the 3D position and direction at each point along the trajectory (where each point corresponds to a 2D hit). For each point the d$Q$/d$x$ and distance from the track-start are recorded using MicroBooNE's Calorimetry module. This procedure allows to accurately measure both d$x$, including small deflections due to the particle's trajectory and Space Charge Effect (SCE) offsets, and d$Q$, by incorporating MicroBooNE's full position- and field-dependent relative and absolute charge calibration. \textcolor{blue}{\st{The conversion from d$Q$/d$x$ to d$E$/d$x$ is calculated differently for tracks and showers. For tracks, the conversion is performed by applying the inverse Modified Box recombination model. For showers, both for the calculation of the trunk d$E$/d$x$ as well as the total energy, a fixed recombination correction is applied assuming 2.1 MeV/cm energy loss. In both cases, local variations in the electric field are accounted for.}}
-\textcolor{blue}{For tracks, the conversion from d$Q$/d$x$ to d$E$/d$x$ is performed by applying the inverse Modified Box recombination model [Add Reference].}
+Pandora processes track-like PFParticles with a sliding linear fit procedure (described in~\cite{bib:pandoraub}) that returns the 3D position and direction at each point along the trajectory (where each point corresponds to a 2D hit). For each point the d$Q$/d$x$ and distance from the track-start are recorded using MicroBooNE's Calorimetry module. This procedure allows to accurately measure both d$x$, including small deflections due to the particle's trajectory and Space Charge Effect (SCE) offsets, and d$Q$, by incorporating MicroBooNE's full position- and field-dependent relative and absolute charge calibration. For tracks, the conversion from d$Q$/d$x$ to d$E$/d$x$ is performed by applying the inverse Modified Box recombination model~\cite{bib:tpccalibrationnote}.
 
-We evaluate the energy and 3D direction of shower-like PFParticles with the same algorithm used for the $\pi^0$ reconstruction paper~\cite{bib:pi0reco}. The energy reconstruction accounts for various detector effects, including gain and recombination; corrections for reconstruction effects (hit threshold and imperfect clustering) will be described in Sec.~\ref{sec:ereco}. We also fit showers using a Kalman filter-based procedure~\cite{bib:shrtrackfitter} which aims at identifying the main trunk of the shower by rejecting hits that are longitudinally or transversely displaced from it; the output of this fit is a track object. Thus, the calorimetric tools described above become available for showers as well, with an important caveat: \textcolor{blue}{the conversion from d$Q$/d$x$ to d$E$/d$x$ is different for showers and tracks. For showers, a fixed recombination correction is applied assuming 2.1 MeV/cm energy loss for both the calculation of the trunk d$E$/d$x$ and for the total energy. In all cases, local variations in the electric field are accounted for.}
+We evaluate the energy and 3D direction of shower-like PFParticles with the same algorithm used for the $\pi^0$ reconstruction paper~\cite{bib:pi0reco}. The energy reconstruction accounts for various detector effects, including gain and recombination; corrections for reconstruction effects (hit threshold and imperfect clustering) will be described in Sec.~\ref{sec:ereco}. We also fit showers using a Kalman filter-based procedure~\cite{bib:shrtrackfitter} which aims at identifying the main trunk of the shower by rejecting hits that are longitudinally or transversely displaced from it; the output of this fit is a track object. Thus, the calorimetric tools described above become available for showers as well, with an important caveat: the conversion from d$Q$/d$x$ to d$E$/d$x$ is different for showers and tracks. For showers, a fixed recombination correction is applied assuming 2.1 MeV/cm energy loss for both the calculation of the trunk d$E$/d$x$ and for the total energy. In all cases, local variations in the electric field are accounted for.
 
-By default, Pandora separates showers and tracks with a cut on the SVM score at 0.5; however, as will be described in later sections, in many cases we choose different cut values, i.e. tighter shower definition for the $\nu_e$ selection and looser for the $\pi^0$ control region. \textcolor{blue}{Why? Add a brief justification -- Elena}
+By default, Pandora separates showers and tracks with a cut on the SVM score at 0.5; however, as will be described in later sections, in many cases we choose different cut values, i.e. tighter shower definition for the $\nu_e$ selection and looser for the $\pi^0$ control region.
 
-\par  \textcolor{blue}{Should we add a brief description of how Pandora decides what's a nue interaction? Something along the lines of "When a single shower is present in the slice, Pandora identifies the slice as a $\nu_e$" I don't know if this is correct, please check-- Elena} The efficiency of Pandora's reconstruction on $\nu_e$ interactions is evaluated in figure~\ref{fig:nuereco:eff} as a function of true neutrino energy;  the efficiency for \textcolor{blue}{\st{correctly identifying $\nu_e$s in the event} identifying the $\nu_e$ events as neutrino interactions --Elena}  is shown in black, and the efficiency for reconstructing $\nu_e$ interactions with a final-state EM shower in blue. The efficiency has a sharp upturn between 100 and 200 MeV, especially in the case when an EM shower is required, and levels off at 80\% and 60\% respectively for the two curves. 
+\par  \textcolor{blue}{Should we add a brief description of how Pandora decides what's a nue interaction? Something along the lines of "When a single shower is present in the slice, Pandora identifies the slice as a $\nu_e$" I don't know if this is correct, please check-- Elena} The efficiency of Pandora's reconstruction on $\nu_e$ interactions is evaluated in figure~\ref{fig:nuereco:eff} as a function of true neutrino energy;  the efficiency for identifying the $\nu_e$ events as neutrino interactions is shown in black, and the efficiency for reconstructing $\nu_e$ interactions with a final-state EM shower in blue. The efficiency has a sharp upturn between 100 and 200 MeV, especially in the case when an EM shower is required, and levels off at 80\% and 60\% respectively for the two curves. 
 \par At this stage in the analysis, the good efficiency for reconstructing $\nu_e$ events is offset by the very low signal-to-background for $\nu_e$ events in MicroBooNE's data, a consequence of the very small $\nu_e$ content of the beam. With no additional requirement on the reconstructed neutrino, the purity for $\nu_e$ interactions is 0.12\% (figure~\ref{fig:nuereco:sliceid}). After imposing a requirement of one reconstructed shower, the purity grows by almost an order of magnitude, to 1\% (figure~\ref{fig:nuereco:shower}). The $\nu$ background composition also changes significantly, with $\pi^0$ backgrounds moving from 14\% to 48\% of all backgrounds.
 
 \begin{figure}[ht] 
@@ -45,8 +44,8 @@ By default, Pandora separates showers and tracks with a cut on the SVM score at 
 %    \item Shower, using the standard Pandora Shower reconstruction (is there any modification on top of this?)
 %    \item Track-fitted shower, using a dedicated track fitting tool which aims at identifying the main branch of %the shower and fit it as a track. As a result, all the tools developed for the track become available for the %tracks too. For example, for each track-fitted shower, a recob::track and a anab::calorimetry objects are available.
 %\end{itemize}
-Particle identification is performed with different tools depending \textcolor{blue}{on whether the particle is selected as a track- or shower-candidate \st{the type of candidate a given PFParticle has been selected as}.
-If the PFParticle has been selected as a \st{muon or proton candidate, so as a} track-like object}, the identification is performed using the Calorimetry Likelihood tool, which results in the variable Log Likelihood Ratio PID (LLR), see section~\ref{subsec:loglikelihoodpid}.
+Particle identification is performed with different tools depending on whether the particle is selected as a track- or shower-candidate.
+If the PFParticle has been selected as a track-like object, the identification is performed using the Calorimetry Likelihood tool, which results in the variable Log Likelihood Ratio PID (LLR), see section~\ref{subsec:loglikelihoodpid}.
 If the PFParticle has been selected as an electron or photon candidate, the identification is performed using several variables described in \ref{subsec:egammaspearation}.
 %It is noteworthy that this particle identification consists of one or multiple variables, available for the specific PFParticle, that may or may not depend on \textcolor{blue}{additional information from} the rest of the slice. 
 %For example, the shower d$E$/d$x$ depends only on the PFParticle itself, whereas the track-shower separation relies also on additional objects identified in the slice.
