Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -779,7 +779,7 @@ piplus\_PrimaryHadronSWCentralSplineVariation     &  Primary Hadron Sanford Wang
 \end{figure}
 
 \subsection{Neutrino Interaction Modeling Uncertainties \textcolor{green}{Maya/Sebastien}}
-We use the \texttt{GENIE} event reweighting framework with the standard reweighting parameters, also known as "knobs", to model the neutrino cross section and final stats uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
+We use the \texttt{GENIE} event reweighting framework with the standard reweighting parameters, also known as ``knobs'', to model the neutrino cross section and final statistical uncertainties. Document~\cite{bib:geniesupportnote} describes the GENIE cross-section model, recommended central-value tune, and the recommended uncertainties for MCC9 analyses. 
 
 The updated Genie central value tune is guided on fits to the T2K data which increase the MA CCQE and scale up the MEC normalization.
 
